<resources>
    <string name="app_name">PRODUCTION PLANNING</string>
    <!-- Strings related to login -->
    <string name="prompt_email">Login</string>
    <string name="prompt_password">Password</string>
    <string name="action_sign_in">LOGIN</string>
    <string name="action_sign_in_short">Sign in</string>
    <string name="welcome">"Welcome !"</string>
    <string name="invalid_username">Not a valid username</string>
    <string name="invalid_password">Password must be >5 characters</string>
    <string name="login_failed">"Login failed"</string>
    <string name="production_software">Production software</string>
    <string name="title_activity_main">MainActivity</string>
    <string name="tab_text_user">User</string>
    <string name="tab_text_products">Products</string>
    <string name="tab_text_server">Server</string>
</resources>